See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.59.00

              pamstereogram: fix crash introduced in 10.54 (March 2011).

              pamstereogram: fix crash introduced in 10.53 (December 2010).

12.03.29 BJH  Release 10.58.00

              Add ppmtospu, 22 years late.

              pngtopam: fix incorrect output when PNG has 16 bits per pixel.
              Broken in 10.56.

              pgmtexture: fix integer overflow in difference variance.
              Always broken.

              pgmtexture: fix array bounds violations in various calculations.
              Always broken.

              xpmtoppm: Make it work on XPM with zero characters per pixel.

              pm_make_tmpfile_fd: fix improper handling when unable to get
              memory to construct file name.

              ppmquantall: replace with pnmquantall and change from Bash
              to Perl.

              Windows/Mingw: fix bug: temporary file creation fails
              consistently.  Broken in 10.34.

              Windows/Mingw: set binary mode on files.

              Windows: compute program name correctly.

              configure: work around Perl bug that causes 'configure' to
              falsely conclude Svgalib is installed.

              Build: Use rand/srand instead of random/srandom because the
              latter are not present in Mingw builds.

              Build: fix bug finding X libraries for merge buildl

              Build: redo conditional compilation of Windows to use
              MSVCRT, based on _WIN32, instead of WIN32.

              Build, Windows: various fixes.

              Build: use Pkgconfig to find libxml2 if it works (fall back
              to xml2-config).

11.12.30 BJH  Release 10.57.00

              pnmnorm: add -midvalue, -middle .

              pngtopam: fix crash with invalid tIME chunk.  Always broken.
