@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.59.00
 
+              ppmdraw: Add 'filledcircle' command class.  Thanks
+              Elijah Griffin <eli@panix.com>.
+
               pamstereogram: fix crash introduced in 10.54 (March 2011).
 
               pamstereogram: fix crash introduced in 10.53 (December 2010).
